# RepSTDC

./: mmlab.yaml
config/_base_/: default_runtime.py
config/repstdc/: repstdc-ca_512x512_80k_fbp24.py  repstdc-ca_512x512_80k_gid.py  repstdc-ca_512x512_80k_gid15.py  repstdc-ca_512x512_80k_gid5.py  repstdc-ca_512x512_80k_oem.py  repstdc-ca_512x512_80k_potsdam.py  repstdc-ca_512x512_80k_vaihingen.py  repstdc-cbam_512x512_80k_fbp24.py  repstdc-cbam_512x512_80k_gid15.py  repstdc-cbam_512x512_80k_gid5.py  repstdc-cbam_512x512_80k_oem.py  repstdc-cbam_512x512_80k_potsdam.py  repstdc-cbam_512x512_80k_vaihingen.py  repstdc-eca-ca_512x512_80k_gid15.py  repstdc-eca-ca_512x512_80k_gid5.py  repstdc-eca-ca_512x512_80k_oem.py  repstdc-eca_512x512_80k_oem.py  repstdc2_512x512_80k_gid5.py  repstdc_512x512_80k_fbp24.py  repstdc_512x512_80k_gid15.py  repstdc_512x512_80k_gid5.py  repstdc_512x512_80k_oem.py  repstdc_512x512_80k_potsdam.py  repstdc_512x512_80k_vaihingen.py
config/segformer/: segformer_mit-b0_8xb1_512x512_80k_fbp24.py  segformer_mit-b0_8xb1_512x512_80k_gid15.py  segformer_mit-b0_8xb1_512x512_80k_gid5.py  segformer_mit-b0_8xb1_512x512_80k_oem.py  segformer_mit-b0_8xb1_512x512_80k_potsdam.py
data/: 新建 文本文档.md
mmseg_geo/: pyproject.toml  setup.py
mmseg_geo/mmseg_geo/datasets/: __init__.py  fbp.py  fbp24.py  gid.py  gid15.py  gid5.py  oem.py
mmseg_geo/mmseg_geo/models/: __init__.py
mmseg_geo/mmseg_geo/models/backbones/: CoordinateAttention.py  __init__.py  repstdc copy.py  repstdc-bak.py  repstdc.py
tools/: reparameterize_model.py  test.py  train.py
(+47 files in other folders)
